[package]
name = "mids-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
byteorder = "1.5"
native-windows-gui = "1.0"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
